--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inventory Management API</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Inventory Management API</h1>
-        <p>Welcome to our modern inventory management solution. Track, manage and optimize your inventory with our advanced system.</p>
+      <h1>Inventory Management API</h1>
+      <p>
+        Welcome to our modern inventory management solution. Track, manage and
+        optimize your inventory with our advanced system.
+      </p>
 
-        <div class="docs-link">
-            <p>Learn more about our API:</p>
-            <a href="./api-docs">API Documentation</a>
-        </div>
+      <div class="docs-link">
+        <p>Learn more about our API:</p>
+        <a href="./api-docs">API Documentation</a>
+      </div>
 
-        <div class="links">
-            <a href="./login.html">Login</a>
-            <a href="./register.html">Register</a>
-        </div>
+      <div class="links">
+        <a href="./login.html">Login</a>
+        <a href="./register.html">Register</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
