--- a/public/register.html
+++ b/public/register.html
@@ -26,6 +26,7 @@
           <label for="fullName">Full Name</label>
           <input type="text" id="fullName" name="fullName" required />
         </div>
+        <div id="errorMessage" class="error-message"></div>
         <button
           type="submit"
           id="registerBtn"
@@ -46,6 +47,6 @@
         <a href="/index.html">Home</a>
       </div>
     </div>
-    <script src="Scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
   </body>
 </html>
